--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "1.0.0",
   "description": "Please see the laudspeaker-js docs for more information.",
   "main": "./dist/main.js",
+  "type": "module",
   "root": true,
   "scripts": {
     "start": "node ./dist/index.js",
+    "prepare": "npm run build",
     "prebuild": "rimraf dist",
     "build": "webpack --mode=production --node-env=production",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run lint:fix && git add -A src",
+    "postversion": "git push && git push --tags",
     "build:dev": "rimraf dist && webpack --mode=development",
     "build:prod": "rimraf dist && webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "lint": "eslint --ignore-path .gitignore . && prettier -c --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ignore-path .gitignore . && prettier --write --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
