--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "noImplicitAny": true,
-    "module": "ESNext",
+    "module": "ES6",
     "target": "es5",
-    "allowJs": true,
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
