--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,7 @@
     "outDir": "./dist",
     "moduleResolution": "node"
   },
-  "files": ["src/index.ts"]
+  "files": ["src/index.ts"],
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
