--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "declaration": true,
     "declarationMap": true,
     "outDir": "./dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "typeRoots": ["./node_modules/@types", "./src/types.ts"],
   },
   "files": ["src/index.ts"],
   "include": ["src"],
