--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "npm run build",
     "prebuild": "rimraf dist",
     "build": "npm run build:prod",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "jest",
     "prepublishOnly": "npm test && npm run lint && npm run build",
     "preversion": "npm run lint",
     "version": "npm run lint:fix && git add -A src",
@@ -34,7 +34,11 @@
   },
   "homepage": "https://github.com/laudspeaker/laudspeaker-js#readme",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
     "@types/react-dom": "^18.0.11",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@webpack-cli/generators": "^3.0.1",
@@ -46,9 +50,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.7",
     "rimraf": "^4.4.1",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
