--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "description": "Please see the laudspeaker-js docs for more information.",
   "root": true,
   "private": true,
-  "workspaces": [
-    "packages/laudspeaker-js",
-    "packages/react"
-  ],
   "scripts": {
     "lint": "eslint --ignore-path ./.gitignore . && prettier -c --ignore-path ./.gitignore .",
     "lint:fix": "eslint --fix --ignore-path ./.gitignore . && prettier --write --ignore-path ./.gitignore ."
@@ -23,6 +19,8 @@
   },
   "homepage": "https://github.com/laudspeaker/laudspeaker-js#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
