--- a/packages/laudspeaker-js/package.json
+++ b/packages/laudspeaker-js/package.json
@@ -50,8 +50,6 @@
     "@types/jest": "^29.5.1",
     "@types/react-dom": "^18.0.11",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
     "@webpack-cli/generators": "^3.0.1",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.5.0",
@@ -73,5 +71,9 @@
     "react-markdown": "^8.0.7",
     "react-social-media-embed": "^2.3.5",
     "socket.io-client": "^4.6.1"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
