--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@laudspeaker/react",
+  "name": "@laudspeaker/core",
   "author": "laudspeaker.com",
   "version": "0.3.0",
   "description": "Please see the laudspeaker-js docs for more information.",
@@ -7,7 +7,8 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "package.json"
+    "package.json",
+    "README.md"
   ],
   "scripts": {
     "start": "node ./dist/index.js",
@@ -28,7 +29,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/laudspeaker/laudspeaker-js.git",
-    "directory": "packages/react"
+    "directory": "packages/core"
   },
   "keywords": [],
   "license": "ISC",
@@ -42,13 +43,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
-    "@types/react-dom": "^18.0.11",
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@webpack-cli/generators": "^3.0.1",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.5.0",
@@ -64,16 +60,6 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.17",
-    "@laudspeaker/laudspeaker-js": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.7",
-    "react-social-media-embed": "^2.3.5",
     "socket.io-client": "^4.6.1"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
   }
 }
