--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@laudspeaker/react",
+  "name": "@laudspeaker/react-native",
   "author": "laudspeaker.com",
   "version": "0.3.0",
   "description": "Please see the laudspeaker-js docs for more information.",
@@ -28,7 +28,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/laudspeaker/laudspeaker-js.git",
-    "directory": "packages/react"
+    "directory": "packages/react-native"
   },
   "keywords": [],
   "license": "ISC",
@@ -47,7 +47,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
-    "@types/react-dom": "^18.0.11",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@webpack-cli/generators": "^3.0.1",
     "babel-loader": "^9.1.3",
@@ -64,16 +63,14 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.17",
-    "@laudspeaker/laudspeaker-js": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.7",
-    "react-social-media-embed": "^2.3.5",
-    "socket.io-client": "^4.6.1"
+    "react-native": "^0.72.3",
+    "@laudspeaker/core": "^0.3.0"
   },
   "peerDependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-native": "^0.72.3"
   }
 }
