Adding checkout step to circleci automation.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: cimg/node:18.12
     steps:
+      - checkout
       - run:
           name: Authenticate with registry
           command: |
