--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,10 @@ jobs:
       - run:
           name: Publish packages
           command: |
-            cd ~/project/packages/core && npm publish
-            cd ~/project/packages/laudspeaker-js && npm publish
-            cd ~/project/packages/react && npm publish
-            cd ~/project/packages/react-native && npm publish
+            cd ~/project/packages/core && npm publish || true
+            cd ~/project/packages/laudspeaker-js && npm publish || true
+            cd ~/project/packages/react && npm publish || true
+            cd ~/project/packages/react-native && npm publish || true
 
 workflows:
   main:
